--- a/ZooFormsApp/ZooFormsApp.csproj
+++ b/ZooFormsApp/ZooFormsApp.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ZooModels\ZooModels.csproj" />
+    <ProjectReference Include="..\ZooModelsNetStandard\ZooModelsNetStandard.csproj" />
   </ItemGroup>
 
 </Project>
