--- a/ZooWPFApp/ZooWPFApp.csproj
+++ b/ZooWPFApp/ZooWPFApp.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ZooModels\ZooModels.csproj" />
+    <ProjectReference Include="..\ZooModelsNetStandard\ZooModelsNetStandard.csproj" />
   </ItemGroup>
 
 </Project>
